components/platform/kyverno-policies/base/netpol-kyverno.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zylos-netpol-kyverno
  namespace: kyverno
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow Admission Webhook traffic from the Kube API Server.
    - ports:
        - protocol: TCP
          port: 9443
    # Allow traffic from other Kyverno pods.
    - from:
        - podSelector: {}
  egress:
    # Push Metrics to OpenTelemetry Collector (OTLP gRPC)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: opentelemetry-collector
      ports:
        - protocol: TCP
          port: 4317
    # Allow traffic to other Kyverno pods.
    - to:
        - podSelector: {}
    # Allow Kyverno to talk to the Kube API Server to create objects.
    - ports:
        - protocol: TCP
          port: 443
    # Allow DNS resolution to kube-system.
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
